tests/ui/async-await/async-closures/fn-exception-target-features.stderr
error[E0277]: the trait bound `#[target_features] fn() -> Pin<Box<(dyn Future<Output = ()> + 'static)>> {target_feature}: AsyncFn()` is not satisfied
  --> $DIR/fn-exception-target-features.rs:15:10
   |
LL |     test(target_feature);
   |     ---- ^^^^^^^^^^^^^^ unsatisfied trait bound
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `AsyncFn()` is not implemented for fn item `#[target_features] fn() -> Pin<Box<(dyn Future<Output = ()> + 'static)>> {target_feature}`
note: required by a bound in `test`
  --> $DIR/fn-exception-target-features.rs:12:17
   |
LL | fn test(f: impl AsyncFn()) {}
   |                 ^^^^^^^^^ required by this bound in `test`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
